# tomato-ripeness-detector

./: .gitignore  HOW_TO_USE_VIEWER.md  README.md  config.yaml  pyproject.toml  requirement.txt
.claude/: settings.local.json
YOLO__laboro_predict_results/yolov10n_baseline_predict/: predictions.json
YOLO_laboro_predict_results/yolov10n_laboro_predict/: predictions.json
YOLO_laboro_train_results/yolov10n_baseline/: args.yaml  results.csv
YOLO_laboro_train_results/yolov10n_laboro/: args.yaml  results.csv
YOLO_predict_results/yolov10n_augmented_tomatOD_predict/: predictions.json
YOLO_tomatOD_predict_results/yolov10n_tomatOD_predict/: predictions.json
YOLO_tomatOD_train_results/yolov10n_tomatOD/: args.yaml  results.csv
YOLO_train_results/yolov10n_augmented_tomatOD/: args.yaml  results.csv
benchmark/: summary.csv
config/: train_yolo26.yaml  train_yolo26_0.yaml  train_yolo26_1.yaml  train_yolo26_tune.yaml
notebook/: bytetrack_quick_test.ipynb  result_deepsort.csv  result_deepsort.json
runs/yolo26_custom_tomato_0/: args.yaml  results.csv
runs/yolo26_custom_tomato_tune/train2/: args.yaml  results.csv
runs/yolo26_custom_tomato_tune/train3/: args.yaml  results.csv
runs/yolo26_custom_tomato_tune/train4/: args.yaml  results.csv
runs/yolo26_custom_tomato_tune/tune_stage1/: best_hyperparameters.yaml  tune_results.csv
runs/yolo26_custom_tomato_tune1/: args.yaml  results.csv
runs/yolo26_merged_tomato/: args.yaml  results.csv
scripts/: _verify_merge.py  _verify_yolo.py  autobatch.py  convert_tomatOD_to_yolo.py  make_supervisely_gt.py  plot_results.py  realtime_tracking.py  setup_dataset.py  sly2mot.py  train_yolo26.py  visualize_gt.py
scripts/data_prep/: convert_custom_tomato_to_yolo.py  convert_merged_dataset_to_yolo.py  merge_custom_tomato_coco.py
scripts/trackers/: basic_bytetracker.py  basic_deepsort.py  basic_sort.py  benchmark.py  realtime_tracking.py  roi_utils.py
scripts/yolo_train/: autobatch.py  plot_results.py  train_yolo26.py
src/: Yolo_laboro_predict.py  Yolo_laboro_train.py  Yolo_predict.py  Yolo_tomatOD_predict.py  Yolo_tomatOD_train.py  Yolo_train.py  data_download.py  fiftyone_viewer.py  fiftyone_viewer_laboro.py  fiftyone_viewer_tomatOD.py  predict.py  prepare_dataset.py  realtime_tracking.py  tracker.py  train.py  trainer.py  video_to_frames.py
tracking_result/: gt_mot.csv
tracking_result/supervisely_gt/: meta.json
tracking_result/supervisely_gt/ds0/ann/: rgb.mp4.json
train_results/yolov10n_baseline/: args.yaml  results.csv
train_results/yolov10n_tomato_custom/: args.yaml  results.csv
