[project]
name = "smart-farm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.2.0",
    "arel==0.3.0",
    "async-asgi-testclient==1.4.11",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "bidict==0.23.1",
    "bleach==6.2.0",
    "cacheout==0.14.1",
    "cachetools==5.5.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cssselect==1.3.0",
    "cssutils==2.11.1",
    "cycler==0.12.1",
    "dataframe-image==0.2.7",
    "dataset-tools==0.1.9",
    "debugpy==1.8.15",
    "defusedxml==0.7.1",
    "distinctipy==1.3.4",
    "executing==2.2.0",
    "fastapi==0.109.0",
    "fastjsonschema==2.21.1",
    "ffmpeg-python==0.2.0",
    "filelock==3.18.0",
    "fonttools==4.59.0",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "future==1.0.0",
    "gdown==5.2.0",
    "geojson==3.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "giturlparse==0.12.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "hyperframe==6.1.0",
    "idna==3.10",
    "imageio==2.37.0",
    "imagesize==1.4.1",
    "imutils==0.5.4",
    "inflect==7.5.0",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.20.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-pygments==0.3.0",
    "kagglehub==0.3.12",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "lxml==6.0.0",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.5",
    "mdurl==0.1.2",
    "memory-profiler==0.61.0",
    "mistune==3.1.3",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "networkx==3.5",
    "numerize==0.12",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==1.5.2",
    "pandocfilters==1.5.1",
    "pillow==10.2.0",
    "platformdirs==4.3.8",
    "playwright==1.54.0",
    "propcache==0.3.2",
    "protobuf==3.20.3",
    "psutil==5.9.8",
    "ptable==0.9.2",
    "py-cpuinfo==9.0.0",
    "pycocotools==2.0.10",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydicom==2.4.4",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pympler==1.0.1",
    "pynrrd==0.4.3",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",
    "python-magic==0.4.27",
    "python-multipart==0.0.12",
    "pytz==2025.2",
    "pywin32==311",
    "pyyaml==6.0.2",
    "pyzmq==27.0.1",
    "referencing==0.36.2",
    "requests==2.32.4",
    "requests-toolbelt==0.10.1",
    "rich==14.1.0",
    "rpds-py==0.26.0",
    "scikit-image==0.25.2",
    "scipy==1.16.1",
    "shapely==2.0.2",
    "simpleitk==2.4.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "starlette==0.35.1",
    "stringcase==1.2.0",
    "supervisely==6.73.413",
    "sympy==1.13.1",
    "tifffile==2025.6.11",
    "tinycss2==1.4.0",
    "titlecase==2.4.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trimesh==4.5.0",
    "typeguard==4.4.4",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ultralytics==8.3.173",
    "ultralytics-thop==2.0.14",
    "urllib3==1.26.15",
    "uvicorn==0.35.0",
    "varname==0.15.0",
    "watchfiles==0.24.0",
    "webencodings==0.5.1",
    "websockets==13.1",
    "xmltodict==0.13.0",
    "yarl==1.20.1",
    "zstd==1.5.7.2",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
