[project]
name = "smart-farm"
version = "0.1.0"
description = "YOLO26 기반 스마트팜 객체 감지 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.11.0",
    "ultralytics>=8.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pyyaml>=6.0",
    "jupyter>=1.1.1",
    "trackers>=2.3.0",
    "inference>=1.1.1",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
tune = [
    "ray[tune]>=2.0.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
